--- a/wp-content/themes/trade-line/style.css
+++ b/wp-content/themes/trade-line/style.css
@@ -301,7 +301,7 @@ h3,
 h4,
 h5,
 h6{
-   color:#2ba48c;
+   color:#d2322d;
    font-family: 'Philosopher', sans-serif;
    font-weight: normal;
 }
@@ -475,7 +475,7 @@ button,
  a.button, input[type="button"],
  input[type="reset"],
  input[type="submit"] {
-    background: #2ba48c none repeat scroll 0 0;
+    background: #d2322d none repeat scroll 0 0;
     border: medium none;
     color: #ffffff;
     font-size: 15px;
@@ -490,7 +490,7 @@ a.button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-    background-color: #009a82 ;
+    background-color: #ea5644 ;
 }
 
 button:focus,
@@ -551,18 +551,18 @@ textarea {
 --------------------------------------------------------------*/
 
 a {
-    color: #2ba48c;
+    color: #636363;
     text-decoration: inherit;
 }
 
 a:visited {
-    color: #2ba48c;
+    color: #636363;
 }
 
 a:hover,
 a:focus,
 a:active {
-    color:#009a82;
+    color:#ea5644;
 }
 
 a:focus {
@@ -580,7 +580,7 @@ a:active {
 
 #main-nav {
     background: none;
-    border-bottom: 2px solid #2ba48c;
+    border-bottom: 2px solid #d2322d;
     width: 100%;
 }
 
@@ -600,7 +600,7 @@ a:active {
 }
 
 .main-navigation ul ul {
-    background-color:#2ba48c;
+    background-color:#d2322d;
     box-shadow: 0 1px 2px;
     left:-9999px;
     margin: 0;
@@ -661,7 +661,7 @@ a:active {
 }
 
 .main-navigation ul ul a {
-    border-bottom: 1px solid #009a82;
+    border-bottom: 1px solid #ea5644;
     border-left: medium none;
     border-right: medium none;
     box-shadow: 0 1px 1px rgba(255, 255, 255, 0.18) inset;
@@ -701,7 +701,7 @@ a:active {
 .main-navigation li:hover > a {
     background-color: #fff;
     box-shadow: 0 0 1px #dddddd;
-    color: #28af97;
+    color: #ea5644;
 }
 
 .main-navigation .menu-toggle,
@@ -731,7 +731,7 @@ a:active {
 .posts-navigation .nav-next,
 .post-navigation .nav-next,
 #infinite-handle span {
-    background:#2ba48c;
+    background:#d2322d;
     float: left;
     padding: 5px 15px;
     width: auto;
@@ -755,7 +755,7 @@ a:active {
 .posts-navigation .nav-next:hover,
 .post-navigation .nav-next:hover,
  #infinite-handle span:hover {
-    background:#009a82;
+    background:#ea5644;
 }
 
 .comment-navigation .nav-previous,
@@ -813,8 +813,8 @@ a:active {
 }
 
 .nav-links .page-numbers.current,.nav-links a.page-numbers:hover {
-    background: #2ba48c none repeat scroll 0 0;
-    border-color: #2ba48c;
+    background: #d2322d none repeat scroll 0 0;
+    border-color: #d2322d;
     color: #ffffff;
 }
 .nav-links .page-numbers.dots {
@@ -942,7 +942,7 @@ a:active {
 }
 
 #sidebar-front-page-widget-area .widget-title span {
-    background-color: #2ba48c;
+    background-color: #d2322d;
     color: #ffffff;
     display: inline-block;
     line-height: 1.5;
@@ -1447,7 +1447,7 @@ object {
 }
 
 .custom-logo-link,.site-logo-link {
-    max-width: 300px;
+    max-width: 100px;
 }
 
 .site-info a{
@@ -1475,10 +1475,22 @@ object {
 }
 
 .right-head {
-    float: right;
-    padding-top: 20px;
+    /*float: right;*/
+    /*padding-top: 20px;*/
+    /*position: absolute;*/
+    top:0;
+    right: 0;
 }
-
+.add-info {
+    float: right;
+}
+.add-info p{
+    font-weight: 700;
+    color: #ea5644;
+}
+.k-head-cus {
+    position: relative;
+}
 .social-links {
     float: right;
 }
@@ -1489,7 +1501,7 @@ object {
 }
 
 .search-box > a {
-    background: #2ba48c none repeat scroll 0 0;
+    background: #d2322d none repeat scroll 0 0;
     color: #ffffff;
     display: block;
     padding: 6.2px 8.7px;
@@ -1501,7 +1513,7 @@ object {
 
 .search-box > a:hover {
     color: #fff;
-    background-color: #009a82;
+    background-color: #ea5644;
 }
 
 .search-box .search-box-wrap {
@@ -1610,7 +1622,7 @@ object {
 }
 
 .trade_line_widget_social ul li a:hover {
-    background-color: #009a82;
+    background-color: #ea5644;
     border: 1px solid rgba(0, 0, 0, 0);
     -moz-transition: all 0.4s ease-out 0s;
     -webkit-transition: all 0.4s ease-out 0s;
@@ -1933,7 +1945,7 @@ object {
 }
 
 #main-slider h3 {
-    background-color: #2ba48c;
+    background-color: #d2322d;
     display: inline-block;
     font-size: 28px;
     line-height: 1.2;
@@ -1958,7 +1970,7 @@ object {
 
 #main-slider .pager-box {
     background-color: #ffffff;
-    border: 1px solid #2ba48c;
+    border: 1px solid #d2322d;
     border-radius: 100%;
     cursor: pointer;
     display: inline-block;
@@ -1979,7 +1991,7 @@ object {
 }
 
 #main-slider .pager-box.cycle-pager-active {
-    background-color: #2ba48c;
+    background-color: #d2322d;
     border-color:#fff;
 }
 
@@ -2009,12 +2021,12 @@ object {
 
 #main-slider .cycle-prev:hover::after,
 #main-slider .cycle-next:hover::after {
-    background-color: #2ba48c;
+    background-color: #d2322d;
 }
 
 #main-slider .cycle-prev::after,
 #main-slider .cycle-next::after {
-    background-color: #2ba48c;
+    background-color: #d2322d;
     padding: 5px 15px;
     text-shadow: 0 0 1px #000000;
     display: block;
@@ -2128,15 +2140,22 @@ h1.page-title {
 }
 
 .sidebar .widget-title {
-    background-image: url("images/sidebar-title-bg.png");
-    background-position: center bottom;
-    background-repeat: repeat-x;
-    background-size: auto auto;
-    padding-bottom: 15px;
+    /*background-image: url("images/sidebar-title-bg.png");*/
+    /*background-position: center bottom;*/
+    /*background-repeat: repeat-x;*/
+    /*background-size: auto auto;*/
+    /*padding-bottom: 15px;*/
+    line-height: 20px;
+    padding: 10px 10px;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    background: #ef1e24;
+    color: #fff;
 }
 
 #sidebar-primary {
-
+    margin-bottom: 15px;
 }
 
 .sidebar a.read-more {
@@ -2153,10 +2172,13 @@ h1.page-title {
 
 .sidebar .widget {
     background-color: #f9f9f9;
-    border: 1px solid #eeeeee;
-    margin: 0 0 30px;
-    padding: 20px;;
-    border-bottom: 5px solid #2ba48c;
+    /*border: 1px solid #eeeeee;*/
+    /*margin: 0 0 30px;*/
+    /*padding: 20px;;*/
+    border-bottom: 5px solid #d2322d;
+}
+.advanced-recent-posts-widget, .sidebar .widget ul{
+    padding: 0 15px;
 }
 
 .widget-area .widget::after,
@@ -2185,7 +2207,7 @@ h1.page-title {
 }
 
 .widget-area ul li::before {
-    color: #009a82;
+    color: #ea5644;
     content: "\f064";
     display: inline-block;
     font-family: FontAwesome;
@@ -2215,7 +2237,7 @@ h1.page-title {
 }
 
 .widget_calendar caption {
-    background: #2ba48c none repeat scroll 0 0;
+    background: #d2322d none repeat scroll 0 0;
     color: #ffffff;
     padding: 5px;
 }
@@ -2260,8 +2282,8 @@ h1.page-title {
 }
 
 #footer-widgets {
-    background-color: #2c2c2c;
-    border-top: 4px solid #2ba48c;
+    background-color: #f9f9f9;
+    border-top: 4px solid #d2322d;
     color: #bbbbbb;
     overflow: hidden;
     padding: 30px 0;
@@ -2269,14 +2291,13 @@ h1.page-title {
 
 #footer-widgets .widget-title {
     border-bottom: 1px solid #3c3c3c;
-    color: #ffffff;
     margin-bottom: 20px;
     padding-bottom: 10px;
     position: relative;
 }
 
 #footer-widgets h3.widget-title::after {
-    background-color: #2ba48c;
+    background-color: #d2322d;
     bottom: -3px;
     content: "";
     display: block;
@@ -2297,7 +2318,7 @@ h1.page-title {
 }
 
 #footer-widgets ul li::before {
-    color: #2ba48c;
+    color: #d2322d;
     content: "\f101";
     display: inline-block;
     font-family: FontAwesome;
@@ -2382,7 +2403,7 @@ h1.page-title {
 }
 
 .scrollup:hover {
-    background-color: #009a82;
+    background-color: #ea5644;
     color: #fff;
     border-radius: 100%;
 }
@@ -2527,7 +2548,7 @@ div.wpcf7 {
     background:#e6ffff none repeat scroll 0 0;
     border: 1px solid;
     border-radius: 100px;
-    color: #2ba48c;
+    color: #d2322d;
     font-size: 43px;
     height: 100px;
     line-height: 1.5;
@@ -2538,7 +2559,7 @@ div.wpcf7 {
 
 
 .trade_line_widget_services .service-block-item:hover {
-    background: #2ba48c none repeat scroll 0 0;
+    background: #d2322d none repeat scroll 0 0;
     color: #fff;
 }
 
@@ -2570,8 +2591,8 @@ div.wpcf7 {
 
 .trade_line_widget_call_to_action {
     background: #f9f9f9 none repeat scroll 0 0;
-    border-left: 7px solid #2ba48c;
-    border-right: 7px solid #2ba48c;
+    border-left: 7px solid #d2322d;
+    border-right: 7px solid #d2322d;
     border-bottom: 1px solid #dadada;
     padding: 20px 30px;
     text-align: center;
@@ -2612,7 +2633,7 @@ div.wpcf7 {
 
 #sidebar-front-page-widget-area .trade_line_widget_call_to_action .widget-title span {
     background: inherit;
-    color: #2ba48c;
+    color: #d2322d;
     margin-bottom: 0;
     padding: 0;
     text-shadow: inherit;
@@ -2643,6 +2664,11 @@ a.button {
     margin-top: 20px;
     float: left;
     width: 100%;
+    border-bottom: 1px dotted;
+}
+.trade_line_widget_advanced_recent_posts .advanced-recent-posts-item:last-child {
+    padding-bottom: 10px;
+    border-bottom:none;
 }
 
 .trade_line_widget_advanced_recent_posts .advanced-recent-posts-item:first-child {
@@ -2700,7 +2726,7 @@ a.button {
 
 .trade_line_widget_latest_news .latest-news-text-wrap {
     background:#f9f9f9 none repeat scroll 0 0;
-    border-top: 3px solid #2ba48c;
+    border-top: 3px solid #d2322d;
     padding: 15px;
 }
 
@@ -2745,7 +2771,7 @@ a.button {
 }
 
 .trade_line_widget_latest_news .latest-news-wrapper:hover {
-    border-bottom: 5px solid #2ba48c;
+    border-bottom: 5px solid #d2322d;
     box-shadow: 0 0 8px;
 }
 
@@ -2854,7 +2880,7 @@ a.button {
 }
 
 .trade_line_widget_teams .our-team-text-wrap {
-    background:#2ba48c;
+    background:#d2322d;
     margin: -10px auto 10px;
     max-width: 100%;
     padding: 5px;
@@ -3135,7 +3161,7 @@ a.button {
     }
 
     #mobile-trigger i {
-        background-color: #2ba48c;
+        background-color: #d2322d;
         border: 2px solid #fffffe;
         box-shadow: 0 1px 2px #000000;
         color: #ffffff;
@@ -3547,8 +3573,8 @@ a.button {
     }
 
     .trade_line_widget_call_to_action {
-        border-left: 3px solid #2ba48c;
-        border-right: 3px solid #2ba48c;
+        border-left: 3px solid #d2322d;
+        border-right: 3px solid #d2322d;
     }
 
 
@@ -3624,12 +3650,16 @@ a.button {
 .pos-c-2-3 { width: 66.6%; margin: 0 17%; }
 .pos-c-full, .pos-c-2-3 { bottom: 0; text-align: center; border-top: none; }
 .scheme-dark { color: #FFF; background-color: rgba(0, 0, 0, 0.5); -moz-text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); -webkit-text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
-.scheme-light { color: #111; background-color: rgba(255, 255, 255, 0.5); -moz-text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6); -webkit-text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6); text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6); }
+.scheme-light { color: #111; background-color: rgba(255, 255, 255, 0.75); -moz-text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6); -webkit-text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6); text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6); }
 .scheme-dark .caption-title { color: #FFF; }
 .scheme-light .caption-title { color: #363636; }
 .no-bg { background: none; }
 .no-bg .caption-title { border-bottom: none; padding: 0; }
 /* == END home page slider == */
+.box-33 {
+    border-top: 3px solid #ea5644;
+}
+
 .box-article-wrapper {
     margin-left: -15px;
     margin-right: -15px;
@@ -3644,13 +3674,67 @@ a.button {
 }
 #k-primary {
     margin-top: 20px;
+    padding-bottom: 20px;
 }
 .btn-k-cus {
-    color: #2d1d1d;
+    color: #fff;
 }
 .btn-k-cus:hover {
     color: #fff;
 }
 .btn-k-cus:visited {
     color: #f5f5f5;
+}
+.no-padding {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+.hot_news_wapper li {
+    list-style-type: none;
+    padding-left: 15px;
+}
+a:hover {
+    text-decoration: none;
+}
+li.no-style {
+    list-style-type: none !important;
+}
+li.no-style:before {
+    content: '' !important;
+}
+.fix-logo, .site-branding img {
+    /*width: 100px;*/
+}
+#site-identity {
+    float: none;
+}
+.top10 {
+    margin-top: 10px;
+}
+.top5 {
+    margin-top: 5px;
+}
+.top0 {
+    margin-top: 0;
+    padding-top: 0;
+}
+.bt0 {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.k-title {
+    font-weight: 700;
+}
+.f-menu {
+    position: fixed;
+    top: 0;
+    background-color: #fff !important;
+    z-index: 9999 !important;
+}
+#masthead {
+    border-top: 5px solid rgba(210, 50, 45, 0.94);
+    padding-top: 20px;
+}
+.box-relate {
+    padding-left: 15px;
 }
